[package]
name = "drone"
version = "0.1.0"
edition = "2021"
# [[bin]]
# name = "blink"
# path = "src/blink/main.rs"
# [[bin]]
# name = "voltage"
# path = "src/voltage/main.rs"
# [[bin]]
# name = "gyroscope"
# path = "src/gyroscope/main.rs"
[[bin]]
name = "ppm2pwm"
path = "src/ppm2pwm/main.rs"
# [[bin]]
# name = "led"
# path = "src/led/main.rs"

# [[bin]]
# name = "pwm"
# path = "src/pwm/main.rs"
[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5", default-features = false, features = ["cortex-m-systick","systick-10khz"] }
# Remove these if you don't want logging.
imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

teensy4-panic = { version = "0.2", features = ["log"] }
mpu6050 = "0.1.6"
cortex-m = "0.7.7"
[dependencies.teensy4-bsp]
version = "0.5"
features = [
    # Use the BSP's runtime.
    "rt",
]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
